<resources>
    <string name="app_name">Parallem</string>
    <string name="notification_channel_id" translatable="false">parallem_channel</string>
    <string name="title_dashboard_parallem">para<font fgcolor="#E30425">ll</font>em</string>
    <string name="login_title">Welcome Back</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="signup_title">Hello!</string>
    <string name="signup_desc">Lets create an account to continue</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_isd">ISD</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_signup">signup</string>
    <string name="text_isd">+91</string>
    <string name="item_home">Home</string>
    <string name="item_projects">Projects</string>
    <string name="item_teams">Teams</string>
    <string name="item_alerts">Alerts</string>
    <string name="item_profile">Profile</string>
    <string name="label_explore">Explore</string>
    <string name="char_bullet">\u2022</string>
    <string name="label_experience">Experience</string>
    <string name="label_projects">Projects</string>
    <string name="label_certifications">Certifications</string>
    <string name="label_skills">Skills</string>
    <string name="label_know_you_better">We would like to know you better..</string>
    <string name="button_save">Save</string>
    <string name="label_choose_avatar">Choose your avatar</string>
    <string name="hint_headline">Headline</string>
    <string name="hint_location">Location</string>
    <string name="button_continue">Continue</string>
    <string name="button_skip">Skip</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_title">Title</string>
    <string name="hint_company">Company</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_authority">Authority</string>
    <string name="label_top_weekly">Top Weekly Developer</string>
    <string name="btn_request_to_collab">Request to Collab</string>
    <string name="hint_capacity">Capacity</string>
    <string name="button_logout">Logout</string>


    <!-- Keys to set tag to the button-->
    <item name="item_number" type="id" />
</resources>
