<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/text_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dimen_18dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <android.support.design.card.MaterialCardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_login_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            app:cardCornerRadius="@dimen/dimen_8dp"
            app:cardElevation="@dimen/dimen_12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_login_email_layout"
                    style="@style/Rounded.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_login_password_layout"
                    style="@style/Rounded.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    app:passwordToggleDrawable="@drawable/ic_password_toggle"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:importantForAutofill="noExcludeDescendants"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/button_login"
                    app:cornerRadius="@dimen/dimen_8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:text="@string/text_forgot_password"
                    android:textAlignment="viewEnd"
                    android:textSize="12sp" />

            </LinearLayout>

        </android.support.design.card.MaterialCardView>

    </RelativeLayout>

</layout>
